--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -129,6 +129,11 @@ nav {
   padding-top: 30px;
 }
 
+a:hover {
+  color: #00454d;
+  text-decoration: none;
+}
+
 .sidebar-list {
   padding: 0;
   margin: 0;
@@ -172,12 +177,20 @@ nav {
   transition: all .7s .6s ease-in-out;
 }
 
-.sidebar-item:last-child {
+.sidebar-item:nth-child(4) {
   -webkit-transition: all .7s .8s ease-in-out;
   -moz-transition: all .7s .8s ease-in-out;
   -ms-transition: all .7s .8s ease-in-out;
   -o-transition: all .7s .8s ease-in-out;
-  transition: all .7s .6s ease-in-out;
+  transition: all .7s .8s ease-in-out;
+}
+
+.sidebar-item:last-child {
+  -webkit-transition: all .7s 1s ease-in-out;
+  -moz-transition: all .7s 1s ease-in-out;
+  -ms-transition: all .7s 1s ease-in-out;
+  -o-transition: all .7s 1s ease-in-out;
+  transition: all .7s .8s ease-in-out;
 }
 
 .sidebar-item.active {
