--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,100 @@ body {
     background: #0c444c;
 }
 
+/* SECTION 1 */
+
 .section-1 img {
     display: block;
     margin: auto;
 }
 
+/* SECTION 2 */
+
 .section-2 {
     height: 100vh;
+    background: #f6f3e9;
+}
+
+.section-2 .row {
+    height: 100%;
+}
+
+.section-2 .row img {
+    /* To center horizontally */
+    display: block;
+    margin: auto;
+    /* To center vertically */
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.rusty-background {
+    background-color: #b44738;
+    /* Rusty color 2: #af4a3c */
+}
+
+hr {
+    display: inline-block;
+    left: 0;
+    width: 10em;
+    border-top: 1px solid #b89e64;
+}
+
+.vertical-center {
+    padding: 70px;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.section-2 h1 {
+    font-family: 'Yatra One', cursive;
+    color: #b89e64;
+    letter-spacing: 2.5px;
+}
+
+.section-2 p {
+    color: #545454;
+    letter-spacing: 1px;
+    padding-top: 30px;
+}
+
+.section-2 button {
+    background-color: #00454d;
+    border: none;
+    color: white;
+    padding: .5em 1.2em;
+    letter-spacing: 1px;
+    margin-top: 30px;
+}
+
+.section-2 button:focus {
+    outline: none;
+}
+
+.section-2 button:hover {
+    background-color: #18737d;
+}
+
+/* SECTION 3 */
+
+.section-3 {
+    height: 100vh;
     background: #ffffff;
+}
+
+@media (max-width: 767px) {
+    .section-2 {
+        height: auto;
+        min-height: 100vh;
+    }
+    .section-2 .row {
+        height: 100%;
+    }
+    .vertical-center {
+        padding: 25px;
+    }
 }
