--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -162,6 +162,14 @@ a:hover {
 }
 
 .sidebar-item:nth-child(2) {
+  -webkit-transition: all .7s .3s ease-in-out;
+  -moz-transition: all .7s .3s ease-in-out;
+  -ms-transition: all .7s .3s ease-in-out;
+  -o-transition: all .7s .3s ease-in-out;
+  transition: all .7s .3s ease-in-out;
+}
+
+.sidebar-item:nth-child(3) {
   -webkit-transition: all .7s .4s ease-in-out;
   -moz-transition: all .7s .4s ease-in-out;
   -ms-transition: all .7s .4s ease-in-out;
@@ -169,7 +177,7 @@ a:hover {
   transition: all .7s .4s ease-in-out;
 }
 
-.sidebar-item:nth-child(3) {
+.sidebar-item:nth-child(4) {
   -webkit-transition: all .7s .6s ease-in-out;
   -moz-transition: all .7s .6s ease-in-out;
   -ms-transition: all .7s .6s ease-in-out;
@@ -177,12 +185,20 @@ a:hover {
   transition: all .7s .6s ease-in-out;
 }
 
-.sidebar-item:nth-child(4) {
+.sidebar-item:nth-child(5) {
   -webkit-transition: all .7s .8s ease-in-out;
   -moz-transition: all .7s .8s ease-in-out;
   -ms-transition: all .7s .8s ease-in-out;
   -o-transition: all .7s .8s ease-in-out;
   transition: all .7s .8s ease-in-out;
+}
+
+.sidebar-item:nth-child(6) {
+  -webkit-transition: all .7s .9s ease-in-out;
+  -moz-transition: all .7s .9s ease-in-out;
+  -ms-transition: all .7s .9s ease-in-out;
+  -o-transition: all .7s .9s ease-in-out;
+  transition: all .7s .9s ease-in-out;
 }
 
 .sidebar-item:last-child {
