--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,30 +2,29 @@ body {
     margin: 0;
 }
 
-.section-1 {
+/* HOME SECTION 1 */
+.home-section-1 {
     height: 100vh;
     background: #0c444c;
 }
 
-/* SECTION 1 */
-
-.section-1 img {
+.home-section-1 img {
     display: block;
     margin: auto;
 }
 
-/* SECTION 2 */
+/* HOME SECTION 2 */
 
-.section-2 {
+.home-section-2 {
     height: 100vh;
     background: #f6f3e9;
 }
 
-.section-2 .row {
+.home-section-2 .row {
     height: 100%;
 }
 
-.section-2 .row img {
+.home-section-2 .row img {
     /* To center horizontally */
     display: block;
     margin: auto;
@@ -56,20 +55,20 @@ hr {
     transform: translateY(-50%);
 }
 
-.section-2 h1 {
+.home-section-2 h1 {
     font-family: 'Yatra One', cursive;
     color: #b89e64;
     letter-spacing: 2.5px;
 }
 
-.section-2 p {
+.home-section-2 p {
     color: #545454;
     letter-spacing: 1px;
     padding-top: 30px;
 }
 
-.section-2 button {
-    background-color: #00454d;
+.home-section-2 button {
+    background-color: #0c444c;
     border: none;
     color: white;
     padding: .5em 1.2em;
@@ -77,30 +76,43 @@ hr {
     margin-top: 30px;
 }
 
-.section-2 button:focus {
+.home-section-2 button:focus {
     outline: none;
 }
 
-.section-2 button:hover {
+.home-section-2 button:hover {
     background-color: #18737d;
 }
 
-/* SECTION 3 */
+/* HOME SECTION 3 */
 
-.section-3 {
+.home-section-3 {
     height: 100vh;
     background: #ffffff;
 }
 
 @media (max-width: 767px) {
-    .section-2 {
+
+/* HOME SECTION 2 */
+    .home-section-2 {
         height: auto;
         min-height: 100vh;
     }
-    .section-2 .row {
+    .home-section-2 .row {
         height: 100%;
     }
     .vertical-center {
         padding: 25px;
     }
+}
+
+/* SECTION 1 */
+.section-1 {
+    height: 20vh;
+    background: #0c444c;
+}
+
+.section-1 img {
+    display: block;
+    margin: auto;
 }
