--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,3 +116,33 @@ hr {
     display: block;
     margin: auto;
 }
+
+/* SECTION 2 */
+.section-2 {
+    height: 100vh;
+    background: #f6f3e9;
+}
+
+.section-2 h1 {
+    font-family: serif;
+    color: #bc9e5a;
+    font-size: 3.5rem;
+    padding-top: 80px;
+    padding-bottom: 50px;
+    letter-spacing: 3px;
+}
+
+.section-2 button {
+        border-radius: 0;
+        width: 185px;
+        padding: 10px;
+        margin-top: 12px;
+        border: none;
+        color: white;
+        background-color: #b44738;
+        letter-spacing: 2px;
+}
+
+.section-2 button:hover {
+    background-color: #f78a7b;
+}
