--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
 body {
     margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#wrapper {
+    flex: 1;
 }
 
 /* HOME SECTION 1 */
@@ -146,4 +152,10 @@ hr {
 
 .section-2 button:hover {
     background-color: #862a21;
+}
+
+footer {
+    color: white;
+    background-color: #0c444c;
+    padding: 100px;
 }
