--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ hr {
 
 .home-section-3 {
     height: 100vh;
-    background-color: #0c444c;
+    background-color: #f6f3e8;
 }
 
 @media (max-width: 767px) {
