--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ a:hover {
 
 .orange-btn {
     display: inline-block;
-    background-color: #862a21;
+    background-color: #b44738;
     border: none;
     color: #f6f3e8;
     padding: .5em 1.2em;
@@ -47,7 +47,7 @@ a:hover {
 }
 
 .orange-btn:hover {
-    background-color: #b44738;
+    background-color: #862a21;
     color: #f6f3e8;
 }
 
@@ -136,6 +136,7 @@ hr {
     padding-bottom: 20px;
 }
 
+
 /* HOME IMAGE CAROUSEL */
 
 .image-carousel {
@@ -143,7 +144,43 @@ hr {
     background-color: #f6f3e8;
 }
 
+.swiper-container {
+    height: 100%;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    z-index: 0;
+}
 
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    height: calc((100% - 30px) / 2);
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    padding: 15px;
+}
 
 
 
