Changes venue sections h1 padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ hr {
     font-family: 'Yatra One', cursive;
     color: #f6f3e9;
     letter-spacing: 2.5px;
-    padding-bottom: 20px;
+    padding: 0px 20px 20px 20px;
 }
 
 
