--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,28 +52,27 @@ a:hover {
 }
 
 /* HOME SECTION 1 */
-.home-section-1 {
-    min-height: 100vh;
+.section-1 {
     background: #0c444c;
 }
 
-.home-section-1 img {
+.section-1 img {
     display: block;
     margin: auto;
 }
 
 /* HOME SECTION 2 */
 
-.home-section-2 {
+.section-2 {
     height: 100vh;
     background: #f6f3e9;
 }
 
-.home-section-2 .row {
+.section-2 .row {
     height: 100%;
 }
 
-.home-section-2 .row img {
+.section-2 .row img {
     /* To center horizontally */
     display: block;
     margin: auto;
@@ -104,13 +103,13 @@ hr {
     transform: translateY(-50%);
 }
 
-.home-section-2 h1 {
+.section-2 h1 {
     font-family: 'Yatra One', cursive;
     color: #b89e64;
     letter-spacing: 2.5px;
 }
 
-.home-section-2 p {
+.section-2 p {
     color: #545454;
     letter-spacing: 1px;
     padding-top: 30px;
@@ -195,12 +194,18 @@ footer {
 /* MOBILE RESPONSIVENESS */
 @media (max-width: 767px) {
 
+/* HOME SECTION 1 */
+    #logo {
+        width: 40%;
+    }
+    
+
 /* HOME SECTION 2 */
-    .home-section-2 {
+    .section-2 {
         height: auto;
         min-height: 100vh;
     }
-    .home-section-2 .row {
+    .section-2 .row {
         height: 100%;
     }
     .vertical-center {
