--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ a:hover {
     color: #f6f3e8;
 }
 
-/* HOME SECTION 1 */
+/* SECTION 1 */
 .section-1 {
     background: #0c444c;
 }
@@ -61,10 +61,10 @@ a:hover {
     margin: auto;
 }
 
-/* HOME SECTION 2 */
+/* SECTION 2 */
 
 .section-2 {
-    min-height: 100vh;
+    height: 100vh;
     background: #f6f3e9;
 }
 
@@ -192,15 +192,21 @@ footer {
 
 
 /* MOBILE RESPONSIVENESS */
+@media (max-width: 992px) {
+    /* SECTION 2 */
+    .section-2 h1 {
+        font-size: 30px;
+    }
+}
 @media (max-width: 767px) {
 
-/* HOME SECTION 1 */
+    /* SECTION 1 */
     #logo {
         width: 40%;
     }
     
 
-/* HOME SECTION 2 */
+    /* SECTION 2 */
     .section-2 {
         height: auto;
         min-height: 100vh;
