--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,18 @@ footer {
     padding: 100px;
 }
 
-
+/* MENU CSS */
+.menu-section {
+    height: 100vh;
+    background: #f6f3e9;
+}
+.menu-section h1 {
+    margin-top: 40px;
+    font-size: 5rem;
+    letter-spacing: 2.5px;
+    font-family: 'Yatra One', cursive;
+    color: #b89e64;
+}
 
 /* MOBILE RESPONSIVENESS */
 @media (max-width: 992px) {
