--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,10 +184,14 @@ hr {
 
 /* FOOTER CSS */
 footer {
-    color: white;
-    background-color: #c23d30;
-    padding: 100px;
+    padding: 100px 100px 0px 100px;
     letter-spacing: 3px;
+    background-color: #c23d30;
+    color: #f6f3e8;
+}
+
+footer .row:first-child {
+    margin-bottom: 50px;
 }
 
 footer ul {
@@ -195,10 +199,17 @@ footer ul {
     line-height: 30px;
 }
 
+footer ul li:hover {
+    color: #0c444c;
+}
+
 footer .fab {
     font-size: 30px;
 }
 
+footer .fab:hover {
+    color: #0c444c;
+}
 /* MENU CSS */
 .menu-section {
     height: 100vh;
