--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,13 +210,14 @@ footer .fab {
 footer .fab:hover {
     color: #0c444c;
 }
+
 /* MENU CSS */
 .menu-section {
     height: 100vh;
     background: #f6f3e9;
 }
 .menu-section h1 {
-    margin-top: 40px;
+    margin: 80px;
     font-size: 5rem;
     letter-spacing: 2.5px;
     line-height: 26px;
