--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,15 @@ footer .fab {
     footer a i {
         margin-right: 10px;
     }
+    /* CONTACT PAGE */
+    .contact-section h1 {
+        margin: 60px 0px 40px 0px;
+        line-height: 80px;
+        font-size: 4rem;
+    }
+    .contact-section p {
+        margin-top: 10px;
+    }
 }
 
 @media (max-width: 576px) {
