Made form button center on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,6 +316,9 @@ footer .fab {
     .contact-section p {
         margin-top: 10px;
     }
+    .form-group-btn {
+        text-align: center;
+    }
 }
 
 @media (max-width: 576px) {
